change in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://syedsaqib-work.github.io/",
+  "homepage": "https://syedsaqib-work.github.io/rtls_client",
   "name": "rtls_client",
   "version": "0.1.0",
   "private": true,
